# themalingadingdong

./: .gitignore  .tarpaulin.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs  devenv.nix  devenv.yaml  dist-workspace.toml  example.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
src/: accent_solver.rs  apca.rs  cli.rs  cli_args.rs  config.rs  contrast_solver.rs  curves.rs  gamut_map.rs  generate.rs  hellwig.rs  import.rs  interpolation.rs  lib.rs  logging.rs  main.rs  validation.rs
src/tui/: activity.rs  app.rs  event.rs  highlighting.rs  ids.rs  input.rs  mod.rs  model.rs  msg.rs  snippets.rs  state.rs  ui.rs
src/tui/activities/: code_preview.rs  main.rs  mod.rs
src/tui/components/: help.rs  mod.rs  palette.rs  preview.rs  validation.rs
src/tui/components/params/: accent_controls.rs  curve_controls.rs  hellwig_picker.rs  hue_grid.rs  mod.rs  oklch_picker.rs  selector.rs  slider.rs  weight_controls.rs
src/tui/snippets/: sample.go  sample.js  sample.py  sample.rs  sample.sh
src/tui/widgets/: help.rs  mod.rs  palette.rs  params.rs  preview.rs  validation.rs
tests/: accent_solver_tests.rs  apca_tests.rs  config_tests.rs  contrast_solver_tests.rs  curves_tests.rs  generate_tests.rs  hellwig_tests.rs  integration_tests.rs  snapshot_tests.rs  validation_tests.rs
tests/snapshots/: snapshot_tests__cusp_lut.snap  snapshot_tests__custom_hue_overrides.snap  snapshot_tests__dark_palette.snap  snapshot_tests__eccentricity_cam16_lut.snap  snapshot_tests__eccentricity_lut.snap  snapshot_tests__gamma_lut.snap  snapshot_tests__high_colorfulness.snap  snapshot_tests__hk_hue_lut.snap  snapshot_tests__light_palette.snap  snapshot_tests__low_colorfulness.snap  snapshot_tests__low_contrast_input.snap  snapshot_tests__pure_black_background.snap  snapshot_tests__pure_white_background.snap  snapshot_tests__relaxed_contrast.snap  snapshot_tests__saturated_purple_background.snap  snapshot_tests__saturated_red_background.snap  snapshot_tests__solarized_dark_like.snap  snapshot_tests__solarized_light_like.snap  snapshot_tests__strict_contrast.snap
