[package]
name = "themalingadingdong"
version = "0.1.0"
edition = "2024"
description = "Base24 palette generator using OKLCH with APCA validation"
license = "MIT"

[dependencies]
palette = { version = "0.7", features = ["std"] }
tinted-builder = "0.6"
clap = { version = "4", features = ["derive"] }
argmin = "0.11"
serde_yaml = "0.9"
color-eyre = "0.6"
ratatui = "0.29.0"
crossterm-actions = { version = "0.2.1", path = "../crossterm-actions" }
float-cmp = "0.10"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
approx = "0.5"
