[package]
name = "themalingadingdong"
version = "1.0.0"
edition = "2024"
description = "Base24 palette generator using Hellwig-Fairchild CAM16 with APCA validation"
license = "MIT"
repository = "https://github.com/JonathanTroyer/themalingadingdong"
homepage = "https://github.com/JonathanTroyer/themalingadingdong"
keywords = ["color", "theme", "base16", "base24", "accessibility"]
categories = ["command-line-utilities", "graphics"]

[dependencies]
palette = { version = "0.7", features = ["std"] }
clap_complete = "4"
csscolorparser = "0.8"
tinted-builder = "0.6"
clap = { version = "4", features = ["derive"] }
argmin = "0.11"
cobyla = { version = "0.8", features = ["argmin"] }
rayon = "1.10"
serde_yaml = "0.9"
serde_json = "1"
color-eyre = "0.6"
ratatui = "0.29.0"
tuirealm = { version = "3.2", default-features = false, features = [
  "crossterm",
  "derive",
] }
crossterm-actions = { version = "1.0.0", features = ["tui-realm"] }
float-cmp = "0.10"
enterpolation = "0.3"
figment = { version = "0.10", features = ["toml"] }
toml = "0.9"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
syntect = "5"
syntect-tui = "3.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
approx = "0.5"
insta = { version = "1.42", features = ["yaml"] }
criterion = "0.5"

[build-dependencies]
palette = { version = "0.7", features = ["std"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
csscolorparser = "0.8"

[[bench]]
name = "benchmarks"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
